# fastapi_template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_users_table.py  002_extended_features.py
core/: admin.py  audit.py  dependencies.py  email.py  exceptions.py  filters.py  health.py  logging_config.py  pagination.py  permissions.py  registry.py  repository.py  security.py  settings.py  templating.py
core/oauth/: __init__.py  google.py
database/: backup.py  base.py  db.py  seed.py
database/models/: __init__.py  audit_log.py  auth_token.py  payment.py  (+2 more)
docs/: README.md  phase-01-core-platform.md  phase-02-database.md  phase-03-migrations.md  phase-04-manage-cli.md  phase-05-htmx-jinja.md  phase-06-auth-and-user.md  phase-07-storage.md  phase-08-google-oauth.md  phase-09-background-tasks.md  phase-10-docker-compose.md  phase-11-payments.md  phase-12-email-auth.md  phase-13-platform.md  phase-14-crud-generator.md
generators/: __init__.py  crud.py  introspection.py  permissions_registry.py  writers.py
middlewares/: __init__.py  base.py  csrf.py  request_logging.py
payments/: __init__.py  base.py  factory.py  razorpay.py  stripe.py
storage/: __init__.py  base.py  factory.py  local.py  s3.py
tasks/: __init__.py  arq_worker.py  celery_app.py  jobs.py  scheduler.py  task_worker.py
templates/: base.html  index.html
tests/: conftest.py  test_auth.py  test_health.py
(+25 files in other folders)
